syntax = "proto3";

package io.github.hsedjame.grpc.tracing.services;
option java_multiple_files = true;

import "dtos.proto";

service DashboardService {
  rpc getTraces(dtos.Empty) returns (stream dtos.TraceDto);
}
